--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express": "^4.21.2",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^8.1.0",
+    "faker": "^6.6.6",
     "form-data": "^4.0.4",
     "helmet": "^8.1.0",
     "http-status": "^2.1.0",
@@ -45,6 +46,7 @@
     "morgan": "^1.10.1",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.2",
+    "node-mocks-http": "^1.17.2",
     "openai": "^6.5.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -52,6 +54,7 @@
     "pg": "^8.16.3",
     "puppeteer": "^24.25.0",
     "redis": "^4.6.0",
+    "supertest": "^7.1.4",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^9.0.1",
@@ -60,6 +63,7 @@
     "xss-clean": "^0.1.4"
   },
   "devDependencies": {
+    "@faker-js/faker": "^10.1.0",
     "@jest/globals": "^30.2.0",
     "jest": "^30.2.0"
   }
