--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
     "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
+    "test:evaluation": "node --experimental-vm-modules node_modules/jest/bin/jest.js tests/integration/evaluation.test.js",
     "docs:serve": "node scripts/docs-server.js",
     "docs:generate": "swagger-jsdoc -d src/config/swagger.js src/routes/v1/*.js -o swagger.json",
     "docs:validate": "swagger-jsdoc -d src/config/swagger.js src/routes/v1/*.js --yaml",
