--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
+    "worker": "node scripts/startWorker.js",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
     "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
@@ -25,6 +26,7 @@
     "axios": "^1.6.0",
     "bcryptjs": "^3.0.2",
     "bull": "^4.11.5",
+    "bullmq": "^5.61.2",
     "chromadb": "^1.8.1",
     "chromadb-default-embed": "^2.14.0",
     "compression": "^1.8.1",
@@ -37,6 +39,7 @@
     "form-data": "^4.0.4",
     "helmet": "^8.1.0",
     "http-status": "^2.1.0",
+    "ioredis": "^5.8.2",
     "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
     "mammoth": "^1.6.0",
